--- a/literacy/aboutmoney.html
+++ b/literacy/aboutmoney.html
@@ -72,12 +72,15 @@
 <p>где $P_B$ и $P_G$ это цены сапог и зерна уже «в деньгах», $M + \Delta S$ — количество денег, которое у крестьян было «в обороте» + то, что достали из кубышек (или убрали в них, тогда $\Delta S &lt; 0$), а $V$ — это сколько раз эти деньги за время ярмарки обернулись.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/aboutmoney&title=Про деньги&description=" target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/aboutmoney&title=Про деньги&description=" target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/aboutmoney" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
