--- a/literacy/instruments.html
+++ b/literacy/instruments.html
@@ -216,12 +216,15 @@
 <p>Важное свойство общерыночного риска — обоюдоострость, причём опаснее та сторона, что завышает стоимость активов выше справедливой. Потому что мы можем не продавать доходные активы себе в убыток, но вот вероятность купить их по ценам, которые приведут к отрицательной доходности на ближайшие пару десятилетий (как американские акции в 2000 или российские в 2008) — есть всегда, и её реализации надо старательно избегать.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments&title=Краткий обзор инструментов сбережения. Сколько и во что вкладывать&description=Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments&title=Краткий обзор инструментов сбережения. Сколько и во что вкладывать&description=Нет доходности без риска. Особенности, риски и историческая доходность наличных денег, вкладов в рублях и долларах, облигаций (ОФЗ), золота, недвижимости, российских и американских акций. Что такое паевые и биржевые (ETF) фонды. Проблемы российских фондов. Неэффективность активно управляемых фондов." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
