--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -89,12 +89,15 @@
 <p>Учитывая колоссальное перепроизводство золота, я рассчитываю, что в перспективе оно должно обесцениться в десятки раз и не держу его ни в каком виде. Желающим диверсификации в этом направлении я рекомендую рассмотреть ETF на корзины драгоценных металлов и/или биржевых товаров в целом, но на российском рынке их нет.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/gold&title=Золото&description=Виды, специфика, риски и доходность вложений в золото." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/gold&title=Золото&description=Виды, специфика, риски и доходность вложений в золото." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/gold" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
