--- a/literacy/instruments/realty.html
+++ b/literacy/instruments/realty.html
@@ -118,12 +118,15 @@
 <p>Если вас привлекает какой-то отдельный сегмент, можно купить долю в недвижимости под управлением конкретной УК — REIT. Но в этом случае вы подписываетесь под операционные риски данной конкретной УК, которые сопоставимы с рисками отдельного объекта недвижимости (хотя в случае REIT ваша ожидаемая доходность будет всё-таки выше — из-за того, что рынок оценивает и включает эти риски в стоимость пая, что проблематично на неликвидном рынке непосредственно недвижимости), поэтому я бы всё-таки рекомендовал ETF — фонды из множества REIT'ов.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/realty&title=Недвижимость&description=Вложения в недвижимость — какова реальная доходность и риски." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/realty&title=Недвижимость&description=Вложения в недвижимость — какова реальная доходность и риски." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/realty" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
