--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -110,12 +110,15 @@
 <p>Эти программы используются обычно для сокрытия денег от судебных приставов в случае имущественных споров и тайной их передачи третьим лицам (именно потому, что уплаченная вами страховая премия — это не ваши деньги и не обязательство страховой перед вами, а ваши траты и доход страховой; обязательство же по выплате у страховой наступит только при страховом случае и только перед теми, кто указан в договоре страхования).</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/reserves&title=Формирование резервов&description=Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/reserves&title=Формирование резервов&description=Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/reserves" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
