--- a/literacy/returns/index.html
+++ b/literacy/returns/index.html
@@ -124,12 +124,15 @@
 <p>Несмотря на всё это, биржа остаётся достаточно прозрачным механизмом. Можно оценить и величину спреда, и объём сделок, и количество участников рынка в очередях на покупку/продажу... и исходя из этого делать хотя бы приблизительные выводы о справедливости предлагаемой цены. Если вы берётесь покупать/продавать <em>по объявлениям</em> или, хуже того, <em>по рекламе</em> — вы однозначно должны уметь считать ожидаемую доходность лучше, чем ваш контрагент.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/returns&title=Анатомия доходности&description=Общий взгляд на механику финансовых инструментов: рыночная цена, доходность, риски, ликвидность." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/returns" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/returns" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/returns" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/returns&title=Анатомия доходности&description=Общий взгляд на механику финансовых инструментов: рыночная цена, доходность, риски, ликвидность." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/returns" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/returns" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/returns" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
