--- a/literacy/stocks.html
+++ b/literacy/stocks.html
@@ -95,12 +95,15 @@
 <p>На что рассчитывать <em>в среднем</em>? На временно́м горизонте порядка 20 лет и больше для хорошо диверсифицированного портфеля — на доходность в размере &lt;инфляция&gt;+5%г (если сначала что-то сильно выросло, оно потом сильно провалится: примерно первые десять лет риски только растут, потом снижаются), максимальную просадку капитала — 80%, максимальную просадку дивидендного потока — 25%, время восстановления капитала из просадки — 10 лет. Это по историческим данным и с учётом инфляции. В номинальных цифрах даже просадку на 75% можно не заметить (те, кто в 2008 покупал недвижимость, не очень заметили, что она с тех пор в четыре раза обесценилась, если пересчитать в рубли на день покупки).</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/stocks&title=Акции и их смысл&description=Что такое акции, зачем предприятия их выпускают, как ведёт себя цена акций, почему и как их следует покупать." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/stocks&title=Акции и их смысл&description=Что такое акции, зачем предприятия их выпускают, как ведёт себя цена акций, почему и как их следует покупать." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/stocks" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
