--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -75,12 +75,15 @@
 <p>Тут мне захотелось донести свою, основанную на личном опыте как сбережений, так и анализа данных и литературы, позицию. Тоже не обошлось без своего триггера, которым стала фраза представителя ЦБ на одной из таких лекций: «можно ещё в доверительное управление деньги передать, и тоже получить хорошую доходность» (на самом деле, конечно, получить можно только убытки: <a href="https://seekingalpha.com/article/3971167-target-hedge-fund-allocation-zero">статья со статистикой за последние 10 лет</a>).</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/aboutme&title=Кто я и как дошёл до жизни такой&description=Что побудило меня заниматься «инвестициями» и почему именно таким образом" target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/aboutme&title=Кто я и как дошёл до жизни такой&description=Что побудило меня заниматься «инвестициями» и почему именно таким образом" target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/aboutme" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
