--- a/notes/bonds_in_portfolio/index.html
+++ b/notes/bonds_in_portfolio/index.html
@@ -109,12 +109,15 @@
 <p>О том, как спланировать и рассчитать расходование пенсионного капитала будет отдельная статья.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/bonds_in_portfolio&title=Облигации в инвестиционном портфеле&description=Рассматриваем различные роли облигаций в инвестиционном портфеле. Для каждой роли — свои облигации." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/bonds_in_portfolio" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/bonds_in_portfolio" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/bonds_in_portfolio" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/bonds_in_portfolio&title=Облигации в инвестиционном портфеле&description=Рассматриваем различные роли облигаций в инвестиционном портфеле. Для каждой роли — свои облигации." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/bonds_in_portfolio" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/bonds_in_portfolio" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/bonds_in_portfolio" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
