--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -93,12 +93,15 @@
 <p>Ссылки на исходные данные в начале статьи, <a href="/notes/diversification_math2/risk.py">код для расчёта и построения графиков</a>.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math2&title=Математика диверсификации-2: доходность и риск&description=Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/diversification_math2&title=Математика диверсификации-2: доходность и риск&description=Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/diversification_math2" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
