--- a/notes/fairprice.html
+++ b/notes/fairprice.html
@@ -77,12 +77,15 @@
 <p>Устремления людей в отношении как потребления, так и производства (чем и как заниматься) глубоко индивидуальны, субъективны и переменчивы. Рыночная цена при отсутствии транзакционных издержек и <strong>экстерналий</strong> (воздействий на среду, которые не учитываются при принятии экономических решений) взвешивает их все так, чтобы они были удовлетворены наилучшим образом. Никакая машина a priori рассчитать эту цену не сможет. Вот до чего мы уже договорились даже на доденежном уровне, самому удивительно.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/fairprice&title=Справедливая цена&description=Какой бедой грозит регулирование цен и зачем нужно государство, если не за этим." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/fairprice&title=Справедливая цена&description=Какой бедой грозит регулирование цен и зачем нужно государство, если не за этим." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/fairprice" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
