--- a/notes/finplan.html
+++ b/notes/finplan.html
@@ -84,12 +84,15 @@
 <p>Ещё одно бесполезное упражнение от советников — оценка своего финансового положения, которое заключается в выписывании рыночной стоимости всех имуществ и объёма всех долгов. Я даже не думаю, что таким образом можно напугать человека, у которого ипотечная квартира и дорогая кредитная машина, а все доходы он проматывает. Он в курсе. Остальным это тем более незачем.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/finplan&title=Личный финансовый план — не нужен&description=Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/finplan&title=Личный финансовый план — не нужен&description=Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/finplan" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
