--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -112,12 +112,15 @@
 <p>Поэтому моя надежда на криптовалюты — в том, что абсолютная прозрачность транзакций и алгоритмизация эмиссии позволит построить точный автоматический регулятор наполнения деньгами различных секторов экономики, сделать экономический рост идеально ровным, а распределение богатства — рыночно-справедливым. К сожалению, криптовалютное сообщество настолько дремуче в экономическом плане, что упорно строит валюты по подобию золота, хотя катастрофические последствия отката на такую систему денежного обращения — вполне очевидны.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/inflation&title=Инфляция&description=Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно" target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/inflation" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/inflation" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/inflation" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/inflation&title=Инфляция&description=Что такое инфляция, её составляющие, как она измеряется, и почему это всё неправильно" target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/inflation" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/inflation" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/inflation" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
