--- a/notes/marketprice.html
+++ b/notes/marketprice.html
@@ -98,12 +98,15 @@
 <p>Итак. Несмотря на то, что некоторая (и, возможно, весьма значительная — я не представляю как это посчитать) часть прошлой доходности фондового рынка обусловлена факторами, которые уже не действуют, нынешним пассивным инвесторам ещё есть на чём получить свои 5%г реальной доходности. Во-первых, за счёт портфельного эффекта между классами и подклассами активов на более длинном временно́́м горизонте чем в среднем по рынку. Во-вторых, за счёт взрывного роста компаний на новых рынках (как это и всегда было). А вот Global Market Portfolio, в котором все активы мира взвешены по их капитализации (т.е. портфель идеального силаевского пассивного инвестора, в точности соответствующего рынку капиталов) — таки да, скорее всего будет иметь доходность околонулевую.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/marketprice&title=Откуда берётся рыночная цена и доходность акций&description=Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/marketprice&title=Откуда берётся рыночная цена и доходность акций&description=Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/marketprice" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
