--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -86,12 +86,15 @@
 <p>Что делать — очевидно: не меньше 20–30% доходов идут в сбережения сразу, рост доходов должен опережать рост расходов (в относительном измерении: скажем, на рост доходов на 20% отвечаем ростом расходов на 5–10), рискуем либо уже заработанными деньгами (но в капитал не залезаем), либо чужими (которые в случае провала не надо возвращать).</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/recklessness&title=Безответственное отношение к деньгам&description=«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/recklessness&title=Безответственное отношение к деньгам&description=«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/recklessness" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
