--- a/notes/system.html
+++ b/notes/system.html
@@ -222,12 +222,15 @@
 <p>Брокер хорош очень дешёвым маржинальным кредитованием, что позволяет не держать крупных резервов, а, в случае острой надобности, вывести деньги под залог акций (дивидендная доходность всё равно выше стоимости кредита, но осторожность и предусмотрительность требуются).</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/system&title=Как организованы мои финансы&description=Схема денежных потоков, используемые банки, карты, брокеры и сервисы, реферальные ссылки" target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/system" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/system" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/system" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/system&title=Как организованы мои финансы&description=Схема денежных потоков, используемые банки, карты, брокеры и сервисы, реферальные ссылки" target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/system" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/system" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/system" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
