--- a/notes/workersfactories.html
+++ b/notes/workersfactories.html
@@ -71,12 +71,15 @@
 <p>Собственно говоря, вот весь наш XX век. Узнаваем и неизбежен. И кажется, что мы его уже пережили (хотя сторонников возврата к этим идеям ещё много, и к ним даже опять прислушиваются, <a href="https://www.oaktreecapital.com/docs/default-source/memos/political-reality-meets-economic-reality.pdf">даже в США</a>), но эта проблема теперь подкрадывается с другой стороны. Фондовый рынок. В развитых странах практически не осталось крупных предприятий, контроль за которыми сохранялся бы руках одного или нескольких владельцев. Они, фактически, стали принадлежать рабочим же. Но, возможно, нас спасёт то, что они принадлежат не их же рабочим. Эта модель ещё требует исследования.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/workersfactories&title=Фабрики — рабочим&description=Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/workersfactories&title=Фабрики — рабочим&description=Что будет, если выгнать всех кровопийц-капиталистов, и передать производство в руки его же рабочих? Воплощаем ленинский лозунг в жизнь на простой модели." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/workersfactories" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
