--- a/donate.html
+++ b/donate.html
@@ -3,17 +3,17 @@
 
 <html lang="ru">
 <head>
-    <title>Как зарабатывать на спекуляциях. Много</title>
+    <title>Отблагодарить</title>
     <meta charset="utf-8" />
-    <link rel="canonical" href="/literacy/speculation" />
+    <link rel="canonical" href="/donate" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/style.css" />
     <link href="/feed.atom.xml" type="application/atom+xml" rel="alternate" title="Житейские воззрения пана Семушельского Atom Feed" />
 
 <meta property="og:locale" content="ru" />
     <meta property="og:type" content="website" />
-<meta property="og:title" content="Как зарабатывать на спекуляциях. Много" />
-<meta property="og:url" content="https://onfin.github.io/literacy/speculation" />
+<meta property="og:title" content="Отблагодарить" />
+<meta property="og:url" content="https://onfin.github.io/donate" />
 
 
 
@@ -49,23 +49,27 @@
 <div class="page pure-u-1 pure-u-lg-9-12">
     <article>
         <header>
-            <h1>Как зарабатывать на спекуляциях. Много</h1>
+            <h1>Отблагодарить</h1>
             <div class="meta">
-                    <p> Обновлено: <time>2019-10-14</time> </p>
-
             </div>
         </header>
 
         <div class="content">
-            
+            <p>Сайт принципиально делается безо всякого даже прицела на коммерциализацию, на одном энтузиазме. Подогреть энтузиазм, засвидетельствовав размер полезности оного, можно здесь:</p>
+<div style="display: flex; flex-direction: column">
+    <a href="https://ru.liberapay.com/blksv/donate" target="blank">LiberaPay (подписка)</a>
+    <a href="https://www.patreon.com/blksv" target="blank">Patreon (подписка)</a>
+    <a href="https://money.yandex.ru/to/410011254416486/200" target="blank">ЯндексДеньги (разово)</a>
+    <a href="https://paypal.me/blksv/200RUR" target="blank">PayPal (разово)</a>
+</div>
         </div>
         <aside>
             <div style="display: flex; flex-direction: column; text-align: right;">
         <div class="share-buttons">
-            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/speculation&title=Как зарабатывать на спекуляциях. Много&description=" target="_blank"><i class="share">&#xea9d;</i></a>
-            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/speculation" target="_blank"><i class="share">&#xea9b;</i></a>
-            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/speculation" target="_blank"><i class="share">&#xea9c;</i></a>
-            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/speculation" target="_blank"><i class="share">&#xea93;</i></a>
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/donate&title=Отблагодарить&description=" target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/donate" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/donate" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/donate" target="_blank"><i class="share">&#xea93;</i></a>
 
         </div>
         <a class="donate-button" href="/donate">Спасибо</a>
@@ -78,15 +82,7 @@
     </main>
 
     <footer>
-<div class="pure-g">
-<div class="pagination pure-u-1 pure-u-lg-9-12">
-    <div class="pure-g">
-    <div class="pure-u-1-3 left"></div>
-    <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"></div>
-    </div>
-</div>
-</div>
+
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
