--- a/literacy/cardscalc.html
+++ b/literacy/cardscalc.html
@@ -249,12 +249,15 @@
 <p>Единственный способ закрыть карту — написать в банке соответствующее заявление (и лучше взять с собой подтверждающий документ). Ни оставление карты на полке, ни даже её блокировка не прекращают обслуживание банком счёта карты (блокировка действует только на стороне платёжной системы). Соответственно, все лимиты будут открытыми, а комиссии — списываться (возможно, в долг или овердрафт под проценты).</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/cardscalc&title=Использование и расчёт банковских карт&description=Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/cardscalc&title=Использование и расчёт банковских карт&description=Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/cardscalc" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
