--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -139,12 +139,15 @@
 <p>Я смотрю аналитические отчёты по банкам на этих сервисах: <a href="http://kuap.ru/">Куап</a> — подробная финансовая отчётность и здоровье банков, <a href="http://www.analizbankov.ru/">Анализ банков</a> — то же, но есть аналитические отчёты по банкам на понятном простом обывателю языке <a href="http://www.analizbankov.ru/bank.php?BankId=tin-koff-bank-2673&amp;BankMenu=nadezhnost">например, Тиньков</a>.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/deposits&title=Размещение средств в банках&description=Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/deposits&title=Размещение средств в банках&description=Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/deposits" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
