--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -164,12 +164,15 @@
 </ol>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/iis&title=Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов&description=Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/iis&title=Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов&description=Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/iis" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
