--- a/literacy/instruments/cash.html
+++ b/literacy/instruments/cash.html
@@ -82,12 +82,15 @@
 <p>Исходные данные: <a href="https://www.cbr.ru/currency_base/dynamics/">курсы валют</a>, <a href="https://www.cbr.ru/hd_base/mkr/mkr_base/">ставки межбанковского рынка</a> и <a href="https://www.cbr.ru/hd_base/ruonia/">RUONIA</a> (фактическая стоимость денег), <a href="https://www.gks.ru/storage/mediabank/tab-potr.html">индекс потребительских цен</a> (динамика расходов среднестатистического потребителя). При расчёте обесценения в каждом месяце брался максимум из монетарного и потребительского обесценения.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/cash&title=Наличные деньги&description=Зачем нужны и какие риски несут наличные деньги." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/cash" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/cash" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/cash" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/instruments/cash&title=Наличные деньги&description=Зачем нужны и какие риски несут наличные деньги." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/instruments/cash" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/instruments/cash" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/instruments/cash" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
