--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -169,12 +169,15 @@
 <p>А далее я приглашаю вас перестраивать мозги и учиться благоустраивать свои финансы к скорейшему переходу в это беззаботное состояние.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/intro&title=Введение&description=Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/literacy/intro&title=Введение&description=Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/literacy/intro" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
