--- a/notes/capital.html
+++ b/notes/capital.html
@@ -81,12 +81,15 @@
 <p>Поэтому меня раздражают рассуждения вроде «нет смысла сегодня откладывать рубль, если завтра получишь десять», или «нет смысла сберегать, если впереди всемирная катастрофа или всеобщее благоденствие», или «можно уехать в деревню — там государственной пенсии хватит». Они смотрят на капитал только как на отложенное потребление, хотя это не единственная и, может быть, даже не самая важная его роль.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/capital&title=Зачем нужен капитал&description=Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/capital&title=Зачем нужен капитал&description=Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/capital" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
