--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -149,12 +149,15 @@
 </ol>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/myportfolio&title=Мой портфель ценных бумаг и стратегия использования брокерских счетов&description=По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/myportfolio&title=Мой портфель ценных бумаг и стратегия использования брокерских счетов&description=По каким правилам я формирую свой портфель ценных бумаг и почему именно так. Из каких бумаг он состоит. Каким образом эти бумаги распределены между брокерами и почему. Возможные направления развития потрфеля." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/myportfolio" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
