--- a/notes/referrals.html
+++ b/notes/referrals.html
@@ -158,12 +158,15 @@
 <p>Если не нашли подходящего, тема с промокодами и приглашениями на разные прочие сервисы/банки ко взаимной выгоде есть на <a href="http://www.banki.ru/forum/?PAGE_NAME=list&amp;FID=27">форуме Склянок</a>.</p>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/referrals&title=Реферальные ссылки&description=Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)" target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/notes/referrals&title=Реферальные ссылки&description=Ссылки на финансовые сервисы которыми я пользуюсь; если их использовать для регистрации в них, можно получить немного халявы (и мне принести)" target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/notes/referrals" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
