--- a/pages/sources.html
+++ b/pages/sources.html
@@ -152,12 +152,15 @@
 </ul>
         </div>
         <aside>
-            <div class="share-buttons">
-        <a href="https://vk.com/share.php?url=https://onfin.github.io/pages/sources&title=Источники&description=Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты." target="_blank"><i class="share">&#xea9d;</i></a>
-        <a href="https://t.me/share/url?url=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea9b;</i></a>
-        <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea9c;</i></a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea93;</i></a>
+            <div style="display: flex; flex-direction: column; text-align: right;">
+        <div class="share-buttons">
+            <a href="https://vk.com/share.php?url=https://onfin.github.io/pages/sources&title=Источники&description=Источники экономической и финансовой информации, которыми я пользуюсь и всем рекомендую. Обзоры банковских карт, надёжность банков, отчётность компаний, дивиденды, макроэкономическая статистика, и просто очень дельные фундаментальные тексты." target="_blank"><i class="share">&#xea9d;</i></a>
+            <a href="https://t.me/share/url?url=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea9b;</i></a>
+            <a href="https://twitter.com/intent/tweet?text=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea9c;</i></a>
+            <a href="https://www.facebook.com/sharer/sharer.php?u=https://onfin.github.io/pages/sources" target="_blank"><i class="share">&#xea93;</i></a>
 
+        </div>
+        <a class="donate-button" href="/donate">Спасибо</a>
     </div>
         </aside>
     </article>
