--- a/notes/workersfactories.html
+++ b/notes/workersfactories.html
@@ -94,7 +94,7 @@
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/notes/fairprice"> &lt;&lt; Справедливая цена </a></div>
     <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/piketti"> Полезно решать дифференциальные уравнения: Тома Пикетти &gt;&gt; </a></div>
     </div>
 </div>
 </div>
